--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
+    font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
     }
 
 title {
+    font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
